# orders_api

./: .gitignore  Pocket.postman_collection.json  README.md  db.py  order.py  order_management.py  prod_queue.py  product.py  pyproject.toml
api/: app.py
api/controllers/: order_controller.py
api/http/: order_controller.py  routes.py
database/: database.py  queue_manager.py
infrastructure/: database.py  queue_manager.py
models/: models.py
scripts/: run_tests.py  setup_env.py
services/: order_service.py
tests/testE2E/: mock.py  test_e2e.py
utils/: logger.py  responses.py
